--- a/experiment.html
+++ b/experiment.html
@@ -24,6 +24,7 @@
         <script src="https://proliferate.alps.science/static/js/proliferate.js" type="text/javascript"></script>
         <!-- <script src="names.csv"></script> -->
         <script src="util.js"></script>
+        <script src="genStims.js"></script>
         <script src="experiment.js"></script>
 
 
