--- a/experiment.html
+++ b/experiment.html
@@ -21,7 +21,7 @@
 
         <!-- Tell the file to run some .js files -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://proliferate.alps.science/static/js/proliferate.js" type="text/javascript"></script>
+        <script src="https://unpkg.com/@jspsych-contrib/plugin-pipe"></script>
         <!-- <script src="names.csv"></script> -->
         <script src="util.js"></script>
         <script src="genStims.js"></script>
